# gnucap-python

./: .gitignore  .gitlab-ci.yml  CONTRIBUTE  Makefile.am  NEWS  README  README.md  THANKS  TODO  ac.py  c_python.cc  configure.ac  err_simplugin.gc  gc_log_compiler  matrix.0.py  py_log_compiler  pz.0.gc  pz.0g.gc
examples/: Makefile.am  README  c_nodeset.py  dataparse.py  measure_at.py  mosfit.py  pz.9.sp  pz_spice.py  pz_stub.gc  pz_stub.py  s_sparam.py
gnucap/: MakeList  Makefile.am  __init__.py.in  _all.i  _ap.i  _c_comand.i  _c_exp.i  _component.i  _e_base.i  _e_card.i  _e_cardlist.i  _e_compon.i  _e_elemnt.i  _e_node.i  _e_paramlist.i  _e_subckt.i  _globals.i  _gnucap_swig.i  _io_.i  _l_compar.i  _l_denoise.i  _m_cpoly.i  _m_matrix.i  _m_wave.i  _md.i  _mode.i  _s__.i  _u_function.i  _u_nodemap.i  _u_opt.i  _u_parameter.i  _u_sim_data.i  _u_time_pair.i  _u_xprobe.i  command.cc  director_except.i  experimental.py  garbage.cc  io_trace.py  pending.py  (+3 more)
m4/: ac_pkg_swig.m4  ax_soname.m4
misc/: Makefile.am  d_brl.cc
out2.7/: ac.py.ref  find_wave.py.ref  matrix.0.py.ref  pz.0.gc.ref  pz.0g.gc.ref  sim.py.ref  store.py.ref
out3.6/: ac.py.ref  err_simplugin.gc.ref  matrix.0.py.ref  pz.0.gc.ref  pz.0g.gc.ref
tests/: Makefile.am  ac.py  c_nodeset.0.cont.gc  c_nodeset.0.gc  c_nodeset.0.nob.gc  c_nodeset.0.p.gc  c_nodeset.0.uic.gc  c_nodeset.1.gc  comp.py  elmt.py  err.0.gc  err_simplugin.py  find_wave.py  install.0.py  install.1.py  install.py  instance.py  matrix.0.py  measure.0.gc  parse_err.py  pz.0.gc  pz.0g.gc  s_sparam.3.gc  sim.py  store.py  u_param.0.py
tests/out2/: c_nodeset.0.cont.gc.out  c_nodeset.0.gc.out  c_nodeset.0.nob.gc.out  c_nodeset.0.uic.gc.out  install.1.py.out  measure.0.gc.out  pz.0.gc.out
tests/out3/: c_nodeset.0.cont.gc.out  c_nodeset.0.gc.out  c_nodeset.0.nob.gc.out  c_nodeset.0.p.gc.out  c_nodeset.0.uic.gc.out  comp.py.out  err.0.gc.out  install.0.py.out  install.py.out  instance.py.out  pz.0.gc.out  pz.0g.gc.out  s_sparam.3.gc.out  u_param.0.py.out
