## Process this file with automake to produce Makefile.in
# Author: 2018 Felix Salfelder
# license GPLv3+

pkgexamplesdir = ${docdir}/examples
#sr/share/doc/gnucap-python/examples/
dist_pkgexamples_DATA = ${EXFILES} README

EXFILES= \
	c_nodeset.py \
	dataparse.py \
	inv.py \
	inv.sp \
	measure_at.py \
	mosfit.py \
	mosfit.sp \
	n.typ \
	p.typ \
	pz.9.sp \
	pz_spice.py \
	pz_stub.gc \
	pz_stub.py \
	s_sparam.py
